# ic15-bes-bhr-myfind

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  doxygen.dcf
src/: helpers.c  helpers.h  main.c  main.h
test/: build-test-env-for-find.sh  diff-test.sh
